[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
# kernel = "1.1.0"
nix = "0.23.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sched"
path = "src/sched.rs"

[[bin]]
name = "sched_nice"
path = "src/sched_nice.rs"


[profile.release]
# opt-level = 1
